[metadata]
name = wlbb
version = 0.1.0
description = WLBB's main purpose is controlling LEDs located in a 3D environement.
long_description = file: README.md
author = Lothaire Sicot
author_email = euriatol@gmail.com
url = https://github.com/Euriatol/pyWellLightBerryBush
license = BSD 3-Clause License
lisence_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir=
    = src
zip_safe = False
python_requires = >=3.6
install_requires =
    importlib_resources>=1.5.0
include_package_data = True

[options.package_data]
wlbb.data = default_config.cfg

[options.packages.find]
where = src